# NotMyCodebase

./: .gitignore  README.md
PyRng/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage.json  data.csv  test_interactive.sh
PyRng/architect/: architecture.md  conventions.md  logs.md  techstack.md
PyRng/evaluator/: evaluation_report.md  logs.md
PyRng/implementer/: logs.md
PyRng/planner/: checklist.md  logs.md  plan.md
PyRng/src/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
PyRng/src/pyrng/: __init__.py  __main__.py
PyRng/src/pyrng/cli/: __init__.py  commands.py  interactive.py  parser.py
PyRng/src/pyrng/config/: __init__.py  loader.py  models.py
PyRng/src/pyrng/core/: __init__.py  exceptions.py  factory.py  generator.py
PyRng/src/pyrng/distributions/: __init__.py  base.py  continuous.py  discrete.py
PyRng/src/pyrng/output/: __init__.py  base.py  formatters.py  writers.py
PyRng/src/pyrng/utils/: __init__.py  logging_utils.py  validation.py
PyRng/tests/: conftest.py
PyRng/tests/integration/: test_interactive.py
PyRng/tests/unit/: test_config_loader.py  test_config_models.py  test_distributions.py  test_exceptions.py  test_factory.py  test_generator.py  test_output.py  test_validation.py
PyRng/user/: logs.md  requirements.md
